fix: alignment of trailer modal

--- a/static/style/card.css
+++ b/static/style/card.css
@@ -22,13 +22,12 @@
     display: block;
     position: fixed;
     z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
+    top: 140px;
+    width: 70%;
     overflow: auto;
     background-color: rgb(0, 0, 0);
     background-color: rgba(0, 0, 0, 0.4);
+    margin: 15% auto;
 }
 
 .modal-content {
@@ -36,7 +35,8 @@
   margin: 15% auto; /* 15% from the top and centered */
   padding: 20px;
   border: 1px solid #888;
-  width: 80%;
+  width: 70%;
+    left: 20%;
 }
 
 .close {
